{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 41,
  "lineage": "5e62b652-2bbf-15a0-f6dd-2c77c751174c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06bc329f376b501f7",
            "arn": "arn:aws:ec2:us-east-1:320112390385:elastic-ip/eipalloc-06bc329f376b501f7",
            "association_id": "eipassoc-08a3cf14f4b0827b9",
            "domain": "vpc",
            "id": "eipalloc-06bc329f376b501f7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f823ef0f35afa528",
            "private_dns": "ip-10-0-1-6.ec2.internal",
            "private_ip": "10.0.1.6",
            "public_dns": "ec2-98-88-40-113.compute-1.amazonaws.com",
            "public_ip": "98.88.40.113",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "enpm818n-nat-eip"
            },
            "tags_all": {
              "Name": "enpm818n-nat-eip",
              "Owner": "ENPM818N-GroupProject",
              "Project": "enpm818n"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320112390385:internet-gateway/igw-0cd99778177fa7d0d",
            "id": "igw-0cd99778177fa7d0d",
            "owner_id": "320112390385",
            "region": "us-east-1",
            "tags": {
              "Name": "enpm818n-igw"
            },
            "tags_all": {
              "Name": "enpm818n-igw",
              "Owner": "ENPM818N-GroupProject",
              "Project": "enpm818n"
            },
            "vpc_id": "vpc-0adb10a011d9caade"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:320112390385:loadbalancer/app/enpm818n-alb/1fa3b433e33c2d4b",
            "arn_suffix": "app/enpm818n-alb/1fa3b433e33c2d4b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "enpm818n-alb-1178346717.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:320112390385:loadbalancer/app/enpm818n-alb/1fa3b433e33c2d4b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "enpm818n-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-08d7fa4a6a30d6ee5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04dd461a977848cf6"
              },
              {
                "subnet_id": "subnet-0d8da48e5e73256dc"
              }
            ],
            "subnets": [
              "subnet-04dd461a977848cf6",
              "subnet-0d8da48e5e73256dc"
            ],
            "tags": {
              "Name": "enpm818n-alb"
            },
            "tags_all": {
              "Name": "enpm818n-alb",
              "Owner": "ENPM818N-GroupProject",
              "Project": "enpm818n"
            },
            "vpc_id": "vpc-0adb10a011d9caade",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:320112390385:loadbalancer/app/enpm818n-alb/1fa3b433e33c2d4b"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:320112390385:listener/app/enpm818n-alb/1fa3b433e33c2d4b/438e3f98dce85317",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:320112390385:targetgroup/enpm818n-tg/9893815b9d4ee2ef",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:320112390385:listener/app/enpm818n-alb/1fa3b433e33c2d4b/438e3f98dce85317",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:320112390385:loadbalancer/app/enpm818n-alb/1fa3b433e33c2d4b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Owner": "ENPM818N-GroupProject",
              "Project": "enpm818n"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:320112390385:listener/app/enpm818n-alb/1fa3b433e33c2d4b/438e3f98dce85317"
          },
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:320112390385:targetgroup/enpm818n-tg/9893815b9d4ee2ef",
            "arn_suffix": "targetgroup/enpm818n-tg/9893815b9d4ee2ef",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/healthcheck.php",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:320112390385:targetgroup/enpm818n-tg/9893815b9d4ee2ef",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:320112390385:loadbalancer/app/enpm818n-alb/1fa3b433e33c2d4b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "enpm818n-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "enpm818n-tg"
            },
            "tags_all": {
              "Name": "enpm818n-tg",
              "Owner": "ENPM818N-GroupProject",
              "Project": "enpm818n"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0adb10a011d9caade"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:320112390385:targetgroup/enpm818n-tg/9893815b9d4ee2ef"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06bc329f376b501f7",
            "association_id": "eipassoc-08a3cf14f4b0827b9",
            "connectivity_type": "public",
            "id": "nat-0f123072a21204382",
            "network_interface_id": "eni-0f823ef0f35afa528",
            "private_ip": "10.0.1.6",
            "public_ip": "98.88.40.113",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d8da48e5e73256dc",
            "tags": {
              "Name": "enpm818n-nat"
            },
            "tags_all": {
              "Name": "enpm818n-nat",
              "Owner": "ENPM818N-GroupProject",
              "Project": "enpm818n"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320112390385:route-table/rtb-0fccd97be7b10f4d5",
            "id": "rtb-0fccd97be7b10f4d5",
            "owner_id": "320112390385",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f123072a21204382",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "enpm818n-private-rt"
            },
            "tags_all": {
              "Name": "enpm818n-private-rt",
              "Owner": "ENPM818N-GroupProject",
              "Project": "enpm818n"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adb10a011d9caade"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320112390385",
            "id": "rtb-0fccd97be7b10f4d5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320112390385:route-table/rtb-0ddb81e7a9b0c350e",
            "id": "rtb-0ddb81e7a9b0c350e",
            "owner_id": "320112390385",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd99778177fa7d0d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "enpm818n-public-rt"
            },
            "tags_all": {
              "Name": "enpm818n-public-rt",
              "Owner": "ENPM818N-GroupProject",
              "Project": "enpm818n"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adb10a011d9caade"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320112390385",
            "id": "rtb-0ddb81e7a9b0c350e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089c822677b8bfe61",
            "region": "us-east-1",
            "route_table_id": "rtb-0fccd97be7b10f4d5",
            "subnet_id": "subnet-0448c95a9ca5de69e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2e7a75e9afa7b6a",
            "region": "us-east-1",
            "route_table_id": "rtb-0fccd97be7b10f4d5",
            "subnet_id": "subnet-0d60e5b06a04b8129"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00743ad5b5c00c1d8",
            "region": "us-east-1",
            "route_table_id": "rtb-0ddb81e7a9b0c350e",
            "subnet_id": "subnet-0d8da48e5e73256dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0626778b6e0cf7c14",
            "region": "us-east-1",
            "route_table_id": "rtb-0ddb81e7a9b0c350e",
            "subnet_id": "subnet-04dd461a977848cf6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320112390385:security-group/sg-08d7fa4a6a30d6ee5",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d7fa4a6a30d6ee5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from the internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "enpm818n-alb-sg",
            "name_prefix": "",
            "owner_id": "320112390385",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "enpm818n-alb-sg"
            },
            "tags_all": {
              "Name": "enpm818n-alb-sg",
              "Owner": "ENPM818N-GroupProject",
              "Project": "enpm818n"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adb10a011d9caade"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320112390385",
            "id": "sg-08d7fa4a6a30d6ee5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320112390385:security-group/sg-0dd642f46932fb874",
            "description": "EC2 security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd642f46932fb874",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08d7fa4a6a30d6ee5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "enpm818n-ec2-sg",
            "name_prefix": "",
            "owner_id": "320112390385",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "enpm818n-ec2-sg"
            },
            "tags_all": {
              "Name": "enpm818n-ec2-sg",
              "Owner": "ENPM818N-GroupProject",
              "Project": "enpm818n"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adb10a011d9caade"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320112390385",
            "id": "sg-0dd642f46932fb874",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320112390385:security-group/sg-0afc9b2ca7a854b0e",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afc9b2ca7a854b0e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from EC2 instances",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dd642f46932fb874"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "enpm818n-rds-sg",
            "name_prefix": "",
            "owner_id": "320112390385",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "enpm818n-rds-sg"
            },
            "tags_all": {
              "Name": "enpm818n-rds-sg",
              "Owner": "ENPM818N-GroupProject",
              "Project": "enpm818n"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adb10a011d9caade"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320112390385",
            "id": "sg-0afc9b2ca7a854b0e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320112390385:subnet/subnet-0448c95a9ca5de69e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0448c95a9ca5de69e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320112390385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "enpm818n-private-0"
            },
            "tags_all": {
              "Name": "enpm818n-private-0",
              "Owner": "ENPM818N-GroupProject",
              "Project": "enpm818n"
            },
            "vpc_id": "vpc-0adb10a011d9caade"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320112390385",
            "id": "subnet-0448c95a9ca5de69e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320112390385:subnet/subnet-0d60e5b06a04b8129",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d60e5b06a04b8129",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320112390385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "enpm818n-private-1"
            },
            "tags_all": {
              "Name": "enpm818n-private-1",
              "Owner": "ENPM818N-GroupProject",
              "Project": "enpm818n"
            },
            "vpc_id": "vpc-0adb10a011d9caade"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320112390385",
            "id": "subnet-0d60e5b06a04b8129",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320112390385:subnet/subnet-0d8da48e5e73256dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8da48e5e73256dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320112390385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "enpm818n-public-0"
            },
            "tags_all": {
              "Name": "enpm818n-public-0",
              "Owner": "ENPM818N-GroupProject",
              "Project": "enpm818n"
            },
            "vpc_id": "vpc-0adb10a011d9caade"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320112390385",
            "id": "subnet-0d8da48e5e73256dc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320112390385:subnet/subnet-04dd461a977848cf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dd461a977848cf6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320112390385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "enpm818n-public-1"
            },
            "tags_all": {
              "Name": "enpm818n-public-1",
              "Owner": "ENPM818N-GroupProject",
              "Project": "enpm818n"
            },
            "vpc_id": "vpc-0adb10a011d9caade"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320112390385",
            "id": "subnet-04dd461a977848cf6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320112390385:vpc/vpc-0adb10a011d9caade",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a93fd7ef3f2bf587",
            "default_route_table_id": "rtb-06342640206ee4835",
            "default_security_group_id": "sg-01370cb1470bac9cb",
            "dhcp_options_id": "dopt-0763cab895b376cf4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0adb10a011d9caade",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06342640206ee4835",
            "owner_id": "320112390385",
            "region": "us-east-1",
            "tags": {
              "Name": "enpm818n-vpc"
            },
            "tags_all": {
              "Name": "enpm818n-vpc",
              "Owner": "ENPM818N-GroupProject",
              "Project": "enpm818n"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320112390385",
            "id": "vpc-0adb10a011d9caade",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}